remove preload none

--- a/app/elements/letter-card.html
+++ b/app/elements/letter-card.html
@@ -14,7 +14,7 @@
         <span class="content-span"><content></content></span>
         <paper-ripple recenters></paper-ripple>
       </div>
-      <audio style="display: none;" src="{{aacAudio}}" preload="none"></audio>
+      <audio style="display: none;" src="{{aacAudio}}"></audio>
     </template>
 </dom-module>
 <script>
