--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <!-- App CSS -->
   <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
   <!-- Polymer Imports -->
-  <script src="../bower_components/webcomponents/webcomponents.js"></script>
+  <script src="../bower_components/webcomponents/webcomponents-lite.min.js"></script>
   <link rel="import" href="../bower_components/polymer/polymer.html">
   <link rel="import" href="../bower_components/layout/layout.html">
   <!-- Layout/Default Elements -->
