--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,12 @@
   <!-- Polymer Imports -->
   <script src="../bower_components/webcomponents/webcomponents-lite.min.js"></script>
   <link rel="import" href="../bower_components/polymer/polymer.html">
+  <!-- Layout/Polymer Elements -->
   <link rel="import" href="../bower_components/layout/layout.html">
-  <!-- Layout/Default Elements -->
   <link rel="import" href="../bower_components/core-header-panel/core-header-panel.html">
+  <link rel="import" href="../bower_components/core-collapse/core-collapse.html">
+  <link rel="import" href="../bower_components/core-icons/core-icons.html">
+  <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
   <!-- Custom Elements Vulcanized -->
   <link rel="import" href="elements/elements.html">
 </head>
@@ -30,11 +33,39 @@
       <score-board class="horizontal end-justified layout flex"></score-board>
     </core-toolbar>
     <div class="content">
-      <letter-list limit="12" lang-code="ar"></letter-list>
-      <div class="footer horizontal center-justified layout"><jumbotron-text></jumbotron-text></div>
+      <div class="horizontal layout">
+        <core-collapse id="collapse1" horizontal>
+          <div class="mini-menu">
+            <div>Arabic: <button id='select-ar' onclick='setLang("ar")'>select</button></div>
+            <div>English: <button id='select-en' onclick='setLang("en")'>select</button></div>
+            <br />
+            <div>Nerdmodus: <button id="select-nerdmodus" onclick="setNerdModus()">select</button></div>
+          </div>
+        </core-collapse>
+        <letter-list limit="12" lang-code="ar"></letter-list>
+      </div>
+      <div class="footer horizontal justified layout center">
+        <div class="footer-button">
+        </div>
+        <jumbotron-text></jumbotron-text>
+        <div></div>
+      </div>
     </div>
   </core-header-panel>
   <script>
+  function toggleCoreCollapse() {
+    document.querySelector('#collapse1').toggle();
+  }
+  function setLang(lang) {
+    console.log("toggling language: " + lang);
+    var wordBoard = document.querySelector('word-board');
+    var letterList = document.querySelector('letter-list');
+    wordBoard.setAttribute("lang-code", lang);
+    letterList.setAttribute("lang-code", lang);
+  }
+  function setNerdModus() {
+    // Stub for those that want to learn good.
+  }
  </script>
 </body>
 </html>
