--- a/app/elements/letter-card.html
+++ b/app/elements/letter-card.html
@@ -62,6 +62,10 @@
       var jumbotronBox = document.querySelector("jumbotron-text");
       jumbotronBox.calcScore2(this.letter);
       var audio = Polymer.dom(this.root).querySelector("audio");
+      if(!audio.paused) {
+        audio.pause();
+        audio.currentTime = audio.currentTime / 3;
+      }
       audio.play();
     },
     handlePulse: function(e) {
