updated shuffle to make results more random

--- a/app/elements/word-recorder.html
+++ b/app/elements/word-recorder.html
@@ -73,7 +73,7 @@
       if(audioElem.readyState === 0) {
         clearTimeout(preventLongRec);
         stopRec(audioElem);
-        return false
+        return false;
       } else {
         audioElem.src = '';
         startRec(audioElem);
