--- a/app/elements/word-recorder.html
+++ b/app/elements/word-recorder.html
@@ -14,7 +14,7 @@
     </style>
     <template>
       <div id="record-elem">
-        <audio id="recAudio" src="" controls hidden></audio>
+        <audio id="recAudio" src="" hidden></audio>
         <paper-icon-button id="recorderInit" icon="av:mic" on-tap="makeRecording"></paper-icon-button>
         <paper-icon-button id="recorderPlay" icon="av:play-circle-fill" on-tap="playRecording"></paper-icon-button>
       </div>
@@ -89,7 +89,7 @@
       }, recLimit);
   }
   function stopRec(audioElem) {
-    if(recorder && recorder.getBlob() === undefined) {
+    if(recorder && audioElem.readyState === 0) {
       
       recorder.stopRecording(function(url) {
         console.log("audio data url: " + url);
@@ -103,7 +103,7 @@
   }
   function playRec(audioElem) {
     // if the user presses play before stop, the recording is stopped and then played
-    if(recorder.getBlob() === undefined) {
+    if(audioElem.readyState === 0) {
       stopRec(audioElem);
       audioElem.onloadeddata = function() { 
         audioElem.play();
