--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,22 @@
 <!doctype html>
-<html manifest="app.manifest">
+<html>
 
 <head>
 
-  <title>Polymer Arabic Game</title>
+  <title>This Is Not A Vocabulary Game</title>
+  <meta name="description" content="This is a language learning game suitable for all ages that helps one learn the alphabet in a target language and produce the sounds of that language.">
 
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <!-- mobile app stuff -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <link rel="manifest" href="mobileapp-manifest.json">
+  <link rel="icon" href="launcher-icon.png">
   <!-- App CSS -->
   <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
   <!-- Polymer Imports -->
-  <script src="../bower_components/webcomponents/webcomponents-lite.min.js"></script>
+  <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="../bower_components/polymer/polymer.html">
   <!-- Layout/Polymer Elements -->
   <link rel="import" href="../bower_components/layout/layout.html">
@@ -23,7 +29,7 @@
   <link rel="import" href="elements/elements.html">
 </head>
 
-<body fullbleed>
+<body fullbleed unresolved>
   <!-- arabic alphabet
   غ	ظ	ض	ذ	خ	ث	ت	ش	ر	ق	ص	ف	ع	س	ن	م	ل	ك	ي	ط	ح	ز	و	ه	د	ج	ب	ا
   -->
@@ -69,28 +75,35 @@
     </div>
   </core-header-panel>
   <core-overlay id="help-overlay" class="dialog" backdrop>
+    <center><h1>This Is Not A Vocabulary Game</h1></center>
     <h3>The Goal</h3>
     <p>Spell the word at the top of the page.</p>
     <h3>The Rules</h3>
     <ol>
       <li>Look at the word at the top of the page.</li>
-      <li>Spell the word using the letters in the grid.</li>
-      <li>Check your word by pressing it at the bottom of the page.</li>
+      <li>Spell the word by tapping the letters in the grid.</li>
+      <li>Check your answer by tapping the word at the bottom of the page.</li>
     </ol>
     <h3>Scoring and Tips</h3>
     <ol>
       <li>100 points for each correct answer and -30 points for each wrong answer.</li>
-      <li>If you need help, click the underlined "A" in the bottom right corner.  This will spell the word for you.</li>
-      <li>When you spell the word correctly, you will automatically hear the word.  However, you still must click the word at the bottom to check it.</li>
+      <li>If you need help, click the underlined "A" in the bottom right corner.</li>
+      <li>When you spell the word correctly, you will automatically hear the word.</li>
+      <li>However, you still must click the word at the bottom to check it.</li>
       <li>There is no delete button, so be careful!</li>
     </ol>
     <div id="help-lang-specific">
-      <strong>Note:</strong> Arabic is a right to left language and the letters look significantly different depending on the position of the letter in the word (solo, beginning, middle, end).  All letters in the matrix are presented in the solo form.  If you get stuck, click a letter multiple times to see all of it's forms.
-      <br>
-      Lastly, in Arabic, some letters have accents (also called diacritics).  For the purposes of this game, you do not need to enter these.  But be careful because dots are not the same as these more elaborate marks.  Think of it as the difference between "l" and "t" (one has a cross the other doesn't) vs "e" and "é" (just an accent mark, at least in English it's just an accent ;-)).
+    <h3><u>Arabic</u></h3>
+    <ol>
+      <li>Right to left language </li>
+      <li>Letters change depending on position within the word (solo, beginning, middle, end)</li>
+      <li>Ignore the symbols (non-dots only) above and below certain letters in your answer</li>
+      <li>These are called diacritics (like accent marks in latin languages) and are used for pronounciation, but are not considered different letters and they are not included past the learning stage of the language</li>
+      <li>Arabic is like the Flappy Bird of languages... Good Luck!</li>
+    </ol>
     </div>
   </core-overlay>
-  <script>
+  <script type="text/javascript">
   var wordBoard = document.querySelector('word-board');
   var letterList = document.querySelector('letter-list');
   var jumbotron = document.querySelector('jumbotron-text');
@@ -131,7 +144,13 @@
   function toggleNerdModus() {
     // Stub for those that want to learn good.
   }
-  
+  function removeUnresolved() {
+    // not used, rather done directly in letter-list.html
+    // but this stub is in case I want to move it here.
+    document.body.removeAttribute("unresolved");
+  }
+
  </script>
+
 </body>
 </html>
